# opencv_ffmpeg_evn

./: CMakeLists.txt  README.md  main.cpp
ffmpegLibs/include/libavcodec/: avcodec.h
ffmpegLibs/include/libavdevice/: avdevice.h
ffmpegLibs/include/libavfilter/: avfilter.h
ffmpegLibs/include/libavformat/: avformat.h
ffmpegLibs/include/libavutil/: avutil.h  file.h  frame.h
ffmpegLibs/include/libpostproc/: postprocess.h
ffmpegLibs/include/libswresample/: swresample.h
ffmpegLibs/include/libswscale/: swscale.h
